Fix footer nav wrapping

--- a/assets/less/site/footer.less
+++ b/assets/less/site/footer.less
@@ -39,6 +39,8 @@
 .footer-nav {
   align-items: center;
   display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
   margin-top: .5rem;
 
   .menu-item {
